--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,10 +19,78 @@
     </mat-option>
   </mat-select> -->
 
+    <!-- <mat-form-field>
+        <input 
+          #username="ngModel"
+          ngModel 
+          name="username"
+          type="text" matInput placeholder="Username" required>
+        <mat-hint>Type a unique username</mat-hint>
+        <mat-error *ngIf="username.invalid && username.errors.required">
+          Username field is required.
+        </mat-error>
+    </mat-form-field> -->
+    <!-- <span matSuffix>@domain.com</span> -->
+
+  <!-- <mat-form-field>
+    <textarea matInput matTextareaAutosize rows="2"></textarea>
+  </mat-form-field> -->
+
+  <!-- <mat-form-field>
+    <input 
+      [min]="minDate"
+      [max]="maxDate"
+      (focus)="picker.open()"
+      matInput [matDatepicker]="picker" placeholder="Choose a date">
+    <mat-datepicker-toggle matSuffix [for]="picker">
+      <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
+    </mat-datepicker-toggle>
+    <mat-datepicker #picker touchUi="true"></mat-datepicker>
+  </mat-form-field> -->
+
+  <!-- <button mat-button>Button 1</button>
+  <button color="primary" mat-raised-button>Primary</button>
+  <button color="accent" mat-raised-button>Accent</button>
+  <button color="warn" mat-raised-button>Warn</button>
+  <button color="primary" mat-fab>
+    <mat-icon>check</mat-icon>
+  </button> -->
+
+  <!-- <mat-chip-list [multiple]="true">
+    <mat-chip 
+      *ngFor="let category of categories" 
+      (click)= "selectCategory(category)"
+      [selected]="category.selected" >
+      {{category.name}}
+    </mat-chip>
+  </mat-chip-list> -->
+
+  <!-- <mat-progress-spinner mode="determinate" [value]="progress"></mat-progress-spinner> -->
+  <!-- <mat-progress-spinner 
+    *ngIf="isLoading"
+    mode="indeterminate" [value]="progress"></mat-progress-spinner> -->
+
+    <!-- <span matTooltip="Here is my tool tips"
+      matTooltipPosition="after">Some Text</span> -->
+    
+      <!-- <mat-tab-group>
+        <mat-tab label="Billing">
+          Content of Billing Tab
+        </mat-tab>
+        <mat-tab label="Shipping">
+            Content of Shipping Tab
+        </mat-tab>
+      </mat-tab-group> -->
+
+      <!-- <button mat-raised-button (click)="openDialog()">Open Dialogue</button> -->
   
-<form>
-  <mat-form-field>
-      <input type="text" matInput placeholder="Username">
-  </mat-form-field>
-</form>
-  
+  <!-- <button color="primary" mat-raised-button matTooltip="Button 1">Button 1</button>
+  <button color="accent" mat-raised-button matTooltip="Button 2">Button 2</button> -->
+
+  <h1>Heading 1</h1>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+    Repellat illum debitis sequi quis, a nisi at hic asperiores?<br>
+    Soluta amet nihil quos! Est aliquam voluptates dignissimos labore <br> 
+    sint atque quis! <br>
+  </p>
